# k-test-case

./: .dockerignore  .env.template  .gitignore  Dockerfile  alembic.ini  compose.yaml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
api/: config.py  db.py  deps.py  filtering.py  main.py  models.py  pagination.py  schemas.py  utils.py
api/controllers/: __init__.py  data_entry.py
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 9358f5018552_data_entry.py
api/repositories/: __init__.py  base.py  data_entry.py
api/services/: __init__.py  base.py  data_entry.py
scripts/: dev-server.sh  make-migrations.sh  migrate.sh  seed.py
src/: main.tsx
src/app/: index.tsx  router.tsx
src/app/entities/data-entry/: api.ts  index.ts  model.ts
src/app/layouts/: default.tsx
src/app/layouts/default/: index.tsx
src/app/providers/: antd-config.tsx  index.tsx
src/entities/data-entry/: api.ts  index.ts
src/pages/infinity-list/: index.tsx  model.ts
src/pages/pagination/: index.tsx  model.ts
src/pages/pagination/ui/: data-entry-table.tsx
src/shared/: api.ts
src/shared/lib/: cache.ts  date.ts  filters.ts  ordering.ts  pagination.ts  promise.ts  url.ts
src/shared/lib/router/: context.ts  index.ts  route.ts  router.tsx
